--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# 🔒 개인 데이터 (프라이버시 보호)
+# 커플 사진 - 개인 사진이므로 git에 올리지 않음
+public/images/*
+!public/images/.gitkeep
+
+# 개인 설정 파일 - 이름, 날짜, 편지 등 개인정보 포함
+# src/config.js
